--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": ".",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "npx nx run-many --target=serve",
+    "build": "npx nx run-many --target=build",
+    "start": "npx nx run-many --target=serve --configuration production",
+    "check-types": "tsc --pretty --noEmit -p ./apps/assessment-test",
+    "check-format": "prettier --check .",
+    "check-lint": "npx nx run-many --target=lint",
+    "format": "prettier --write .",
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "prepare": "husky install"
+  },
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -41,13 +51,14 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
-    "url-loader": "^4.1.1"
-  },
-  "dependencies": {
+    "url-loader": "^4.1.1",
     "core-js": "^3.6.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "husky": "^8.0.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
