--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "core-js": "^3.6.5",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -42,23 +44,23 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.4.5",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
+    "regenerator-runtime": "0.13.7",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
     "typescript": "~4.8.2",
-    "url-loader": "^4.1.1",
-    "core-js": "^3.6.5",
-    "husky": "^8.0.0",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.4.3"
   }
 }
