--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@./shared/assets": ["libs/shared/assets/src/index.ts"],
       "@./web": ["libs/web/src/index.ts"]
     }
   },
