--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@./shared/assets": ["libs/shared/assets/src/index.ts"],
+      "@./shared/components": ["libs/shared/components/src/index.ts"],
       "@./web": ["libs/web/src/index.ts"]
     }
   },
