--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@babel/core": "7.12.13",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "7.12.13",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "@nrwl/cypress": "15.4.5",
     "@nrwl/eslint-plugin-nx": "15.4.5",
     "@nrwl/jest": "15.4.5",
     "@nrwl/linter": "15.4.5",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.4.5",
+    "@nrwl/storybook": "^15.4.5",
     "@nrwl/web": "15.4.5",
     "@nrwl/workspace": "15.4.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -61,15 +65,14 @@
     "nx": "15.4.5",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "react-router-dom": "6.4.3",
     "react-test-renderer": "18.2.0",
     "regenerator-runtime": "0.13.7",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~4.8.2",
-    "url-loader": "^3.0.0",
-    "@nrwl/storybook": "^15.4.5",
-    "react-router-dom": "6.4.3"
+    "url-loader": "^3.0.0"
   },
   "dependencies": {
     "react": "18.2.0",
