--- a/libs/shared/assets/project.json
+++ b/libs/shared/assets/project.json
@@ -12,6 +12,26 @@
         "lintFilePatterns": ["libs/shared/assets/**/*.{ts,tsx,js,jsx}"]
       }
     },
+    "build": {
+      "executor": "@nrwl/rollup:rollup",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/libs/shared/assets",
+        "tsConfig": "libs/shared/assets/tsconfig.lib.json",
+        "project": "libs/shared/assets/package.json",
+        "entryFile": "libs/shared/assets/src/index.ts",
+        "external": ["react/jsx-runtime"],
+        "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
+        "compiler": "babel",
+        "assets": [
+          {
+            "glob": "libs/shared/assets/README.md",
+            "input": ".",
+            "output": "."
+          }
+        ]
+      }
+    },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
