--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.4.5",
     "prettier": "^2.6.2",
+    "react-hook-form": "^7.41.5",
     "react-refresh": "^0.10.0",
     "react-router-dom": "6.4.3",
     "react-test-renderer": "18.2.0",
