--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@mui/material": "^5.11.3",
     "@nrwl/cypress": "15.4.5",
     "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/express": "15.4.5",
     "@nrwl/jest": "15.4.5",
     "@nrwl/linter": "15.4.5",
+    "@nrwl/node": "15.4.5",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.4.5",
     "@nrwl/storybook": "^15.4.5",
@@ -40,8 +42,9 @@
     "@svgr/rollup": "^6.1.2",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.4.0",
+    "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
-    "@types/node": "18.11.9",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
@@ -49,6 +52,8 @@
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "babel-loader": "8.1.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "core-js": "^3.6.5",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
@@ -58,10 +63,12 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "express-validator": "^6.14.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsonwebtoken": "^9.0.0",
     "nx": "15.4.5",
     "prettier": "^2.6.2",
     "react-hook-form": "^7.41.5",
@@ -76,6 +83,7 @@
     "url-loader": "^3.0.0"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
