--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jsonwebtoken": "^9.0.0",
     "nx": "15.4.5",
     "prettier": "^2.6.2",
+    "react-cookie": "^4.1.1",
     "react-hook-form": "^7.41.5",
     "react-refresh": "^0.10.0",
     "react-router-dom": "6.4.3",
